--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@
 
   
 
-    <!-- ======= Contact Section ======= -->
+<!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga</p>
+          <h2>Contacto</h2>
+          <p>Ciudad del Tornillo Coban & Sucursales</p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -386,20 +386,20 @@
               <div class="row">
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <h4>Localizacion:</h4>
+                  <p>2da calle 6-29 zona 3<br>Coban, Alta Verapaz</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>ciudaddeltornillo1@gmail.com</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <h4>Telefono:</h4>
+                  <p>+502 4063 8561</p>
                 </div>
               </div>
             </div>
@@ -413,24 +413,24 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Tu nombre" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Tu Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Tema" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="Mensaje" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message">Su mensaje se ha enviado correctamente, Gracias!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Enviar mensaje</button></div>
             </form>
           </div>
 
@@ -451,11 +451,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Lumia</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              2da calle 6-29 zona 3 <br>
+              Coban, Alta Verapaz<br>
+              Guatemala <br><br>
+              <strong>Phone:</strong> +502 4063 8561<br>
+              <strong>Email:</strong> ciudaddeltornillo1@gmail<br>
             </p>
           </div>
 
@@ -500,7 +500,7 @@
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         
-        <a href="https://www.facebook.com/@Ciudad-del-Tornillo-Coban-Sucursales-100054246711853/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         
       </div>
     </div>
