--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/tornillo2.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -160,51 +160,51 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+          <h2>Productos</h2>
+          <p>Consigue la mejor calidad y variedad de tornillos en nuestra tienda</p>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box">
-              <i class="bi bi-briefcase"></i>
-              <h4><a href="#">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+           <!--   <i class="bi bi-briefcase"></i>-->
+              <h4><a href="#">Tornillos Milimétricos</a></h4>
+              <p>Contamos con medidas desde 6mm hasta 24mm con roscas ordinarias a finas</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-lg-0">
             <div class="icon-box">
-              <i class="bi bi-card-checklist"></i>
-              <h4><a href="#">Dolor Sitema</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+             <!-- <i class="bi bi-card-checklist"></i>-->
+              <h4><a href="#">Esparragos</a></h4>
+              <p> Esparragos con roscas ordinas y finas, iguales de ambos lados y diferentes</p>
+            </div> 
+          </div>
+          <div class="col-md-6 mt-4">
+            <div class="icon-box">
+           <!--   <i class="bi bi-bar-chart"></i>-->
+              <h4><a href="#">Tarugos de tapicería</a></h4>
+              <p>Variedad de tarugos desde #1 hasta #24, diferentes diseños y utilidades </p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
-              <i class="bi bi-bar-chart"></i>
-              <h4><a href="#">Sed ut perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+          <!--<i class="bi bi-binoculars"></i>-->
+              <h4><a href="#">Tornillos Polser</a></h4>
+              <p>Tornillos para lámina galvanizados, pequeños desde 6 a 14 y grandes desde 1/4 a 1/2</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
-              <i class="bi bi-binoculars"></i>
-              <h4><a href="#">Nemo Enim</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+           <!-- <i class="bi bi-brightness-high"></i>-->
+              <h4><a href="#">Tuercas</a></h4>
+              <p>Contamos con tuercas milimetricas y americanas, aceradas, galvanizadas e inoxidables</p>
             </div>
           </div>
           <div class="col-md-6 mt-4">
             <div class="icon-box">
-              <i class="bi bi-brightness-high"></i>
-              <h4><a href="#">Magni Dolore</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6 mt-4">
-            <div class="icon-box">
-              <i class="bi bi-calendar4-week"></i>
-              <h4><a href="#">Eiusmod Tempor</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+          <!-- <i class="bi bi-calendar4-week"></i>-->
+              <h4><a href="#">Roldanas</a></h4>
+              <p>Aceradas, galvanizadas, astrilladas, neopren, fender e inoxidables</p>
             </div>
           </div>
         </div>
